# VoxWorld

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.railway  NOTICE.md  README.md  flake.nix  railway.toml
.cargo/: config.toml
assets/common/items/utility/: coins.ron
assets/voxygen/: io.voxworld.voxworld.desktop  io.voxworld.voxworld.metainfo.xml
assets/voxygen/i18n/: README.md
assets/voxygen/i18n/be/: main.ftl
assets/voxygen/i18n/be/hud/: trade.ftl
assets/voxygen/i18n/ca/: main.ftl
assets/voxygen/i18n/cs/: main.ftl  npc.ftl
assets/voxygen/i18n/cs/hud/: trade.ftl
assets/voxygen/i18n/cs/item/armor/: armor.ftl
assets/voxygen/i18n/cs/item/items/: crafting.ftl
assets/voxygen/i18n/de/: main.ftl  npc.ftl
assets/voxygen/i18n/de/hud/: trade.ftl
assets/voxygen/i18n/de/item/armor/: armor.ftl
assets/voxygen/i18n/de/item/items/: crafting.ftl
assets/voxygen/i18n/en/: main.ftl  npc.ftl
assets/voxygen/i18n/en/hud/: trade.ftl
assets/voxygen/i18n/en/item/armor/: armor.ftl
assets/voxygen/i18n/en/item/items/: crafting.ftl
assets/voxygen/i18n/en/quest/: courier_quests.ftl
assets/voxygen/i18n/es/: main.ftl  npc.ftl
assets/voxygen/i18n/es-419/: _manifest.ron  main.ftl  npc.ftl
assets/voxygen/i18n/es-419/hud/: trade.ftl
assets/voxygen/i18n/es-419/item/armor/: armor.ftl
assets/voxygen/i18n/es-419/item/items/: crafting.ftl
assets/voxygen/i18n/es/hud/: trade.ftl
assets/voxygen/i18n/es/item/armor/: armor.ftl
assets/voxygen/i18n/es/item/items/: crafting.ftl
assets/voxygen/i18n/eu/: main.ftl
assets/voxygen/i18n/eu/hud/: trade.ftl
assets/voxygen/i18n/fr/: char_selection.ftl  main.ftl  npc.ftl
assets/voxygen/i18n/fr/hud/: trade.ftl
assets/voxygen/i18n/fr/item/armor/: armor.ftl
assets/voxygen/i18n/fr/item/items/: crafting.ftl
assets/voxygen/i18n/hu/: main.ftl
assets/voxygen/i18n/it/: main.ftl
assets/voxygen/i18n/it/hud/: trade.ftl
assets/voxygen/i18n/it/item/armor/: armor.ftl
assets/voxygen/i18n/it/item/items/: crafting.ftl
assets/voxygen/i18n/ja/: main.ftl
assets/voxygen/i18n/ko/: main.ftl  npc.ftl
assets/voxygen/i18n/ko/hud/: trade.ftl
assets/voxygen/i18n/nb/: main.ftl
assets/voxygen/i18n/nl/: _manifest.ron  main.ftl
assets/voxygen/i18n/pl/: main.ftl
assets/voxygen/i18n/pl/hud/: trade.ftl
assets/voxygen/i18n/pt/: main.ftl
assets/voxygen/i18n/pt-BR/: main.ftl
assets/voxygen/i18n/pt-BR/hud/: trade.ftl
assets/voxygen/i18n/pt-BR/item/armor/: armor.ftl
assets/voxygen/i18n/pt-BR/item/items/: crafting.ftl
assets/voxygen/i18n/ro/: main.ftl
assets/voxygen/i18n/ru/: main.ftl
assets/voxygen/i18n/ru/hud/: trade.ftl
assets/voxygen/i18n/ru/item/items/: crafting.ftl
assets/voxygen/i18n/sl/: main.ftl
assets/voxygen/i18n/sl/hud/: trade.ftl
assets/voxygen/i18n/sr/: main.ftl
assets/voxygen/i18n/sv/: main.ftl  npc.ftl
assets/voxygen/i18n/sv/hud/: trade.ftl
assets/voxygen/i18n/sv/item/armor/: armor.ftl
assets/voxygen/i18n/sv/item/items/: crafting.ftl
assets/voxygen/i18n/th/: main.ftl
assets/voxygen/i18n/tok/: main.ftl
assets/voxygen/i18n/tr/: _manifest.ron  main.ftl
assets/voxygen/i18n/uk/: main.ftl  npc.ftl
assets/voxygen/i18n/uk/hud/: trade.ftl
assets/voxygen/i18n/uk/item/items/: crafting.ftl
assets/voxygen/i18n/vi/: main.ftl
assets/voxygen/i18n/zh-Hans/: main.ftl  npc.ftl
assets/voxygen/i18n/zh-Hans/hud/: trade.ftl
assets/voxygen/i18n/zh-Hans/item/armor/: armor.ftl
assets/voxygen/i18n/zh-Hans/item/items/: crafting.ftl
assets/voxygen/i18n/zh-Hant/: main.ftl
assets/voxygen/i18n/zh-Hant-TW/item/armor/: armor.ftl
assets/voxygen/i18n/zh-Hant-TW/item/items/: crafting.ftl
assets/voxygen/i18n/zh-Hant/hud/: trade.ftl
assets/voxygen/i18n/zh-Hant/item/armor/: armor.ftl
client/examples/: chat_cli.rs
client/src/: lib.rs
common/: Cargo.toml
common/assets/: Cargo.toml  build.rs
common/assets/src/: lib.rs
common/base/src/: userdata_dir.rs
common/src/comp/inventory/item/: mod.rs
docs/: index.html
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
scripts/: railway-build.sh  railway-start.sh
server-cli/: Cargo.toml  Dockerfile
server-cli/src/: cli.rs  main.rs  shutdown_coordinator.rs
server-cli/src/web/ui/: ui.html
server/src/: cmd.rs  lib.rs
server/src/persistence/: mod.rs
server/src/settings/: mod.rs  server_description.rs
voxygen/: Cargo.toml
voxygen-web/: Cargo.toml  README.md
voxygen-web/scripts/: build-wasm.ps1
voxygen-web/src/: lib.rs  world_preview.rs
voxygen-web/web/: index.html  styles.css
voxygen/benches/: meshing_benchmark.rs
voxygen/src/: cmd.rs  main.rs  panic_handler.rs  window.rs
voxygen/src/audio/sfx/: mod.rs
voxygen/src/hud/: mod.rs
voxygen/src/menu/char_selection/: ui.rs
voxygen/src/menu/main/ui/: mod.rs
voxygen/src/render/: mod.rs
voxygen/src/session/: mod.rs
voxygen/src/settings/: audio.rs  networking.rs
voxygen/src/ui/: img_ids.rs
web-client/: Cargo.toml  README.md
web-client/scripts/: build-wasm.ps1
web-client/src/: lib.rs
web-client/web/: index.html  styles.css
web-gateway/: Cargo.toml  README.md
web-gateway/src/: main.rs  play_session.rs
world/: Cargo.toml
world/examples/: water.rs  world_block_statistics.rs
world/src/: lib.rs
world/src/sim/: erosion.rs  mod.rs
