[package]
name = "voxworld-voxygen-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { package = "veloren-common", path = "../common" }
console_error_panic_hook = "0.1"
hashbrown = { workspace = true }
js-sys = "0.3"
rayon = { workspace = true }
vek = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
veloren_world = { package = "veloren-world", path = "../world" }
rtsim = { package = "veloren-rtsim", path = "../rtsim" }
wgpu = { version = "27", default-features = false, features = [
    "std",
    "wgsl",
    "webgpu",
    "fragile-send-sync-non-atomic-wasm",
] }

[dependencies.web-sys]
version = "0.3"
features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "Window",
]
