[package]
name = "voxworld-web-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
query-server = { package = "veloren-query-server", path = "../common/query_server", features = ["client"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
] }
tokio-tungstenite = "0.28"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
